# Twitch-Channel-Points-Miner-v2

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  run.py
TwitchChannelPointsMiner/: TwitchChannelPointsMiner.py  constants.py  utils.py
TwitchChannelPointsMiner/classes/: Chat.py  Twitch.py  TwitchLogin.py  WebSocketsPool.py  Webhook.py
TwitchChannelPointsMiner/classes/entities/: Streamer.py
assets/: charts.html  script.js  style.css
