[project]
name = "twitch-channel-points-miner-v2"
version = "0.1.0"
description = "A Twitch channel points miner bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "emoji>=2.14.0",
    "flask>=3.1.0",
    "irc>=20.5.0",
    "millify>=0.1.1",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "pre-commit>=4.0.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "validators>=0.34.0",
    "websocket-client>=1.8.0",
]
